--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 spring.jpa.properties.spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
